authn-service/env/pt/set_env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authn-service
spec:
  template:
    spec:
      containers:
        - name: authn-service
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: service
                    operator: In
                    values:
                      - mopl-qa
      tolerations:
        - effect: "NoSchedule"
          key: "service"
          operator: "Equal"
          value: "mopl-qa"
